# Django-Blog

./: .gitignore  README.md
resume_website/comments/: models.py
resume_website/posts/: admin.py
resume_website/resume_website/: settings.py
resume_website_restapi/: .gitignore  pyproject.toml  reqs.txt
resume_website_restapi/category/: models.py  serializers.py  urls.py  views.py
resume_website_restapi/category/migrations/: 0002_category_date_created_category_date_updated_and_more.py
resume_website_restapi/comments/: managers.py  models.py  serializers.py  urls.py  views.py
resume_website_restapi/comments/migrations/: 0005_alter_comment_managers_comment_date_updated_and_more.py  0006_alter_comment_managers.py
resume_website_restapi/common/: validators.py
resume_website_restapi/posts/: admin.py  choices.py  filters.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
resume_website_restapi/posts/migrations/: 0004_alter_post_options_alter_post_managers_and_more.py  0005_alter_post_managers.py
resume_website_restapi/resume_website_restapi/: settings.py  urls.py
resume_website_restapi/socialAuth/: apps.py  tests.py  urls.py  views.py
resume_website_restapi/templates/account/email/: email_confirmation_message.txt  email_confirmation_signup.html  email_confirmation_subject.txt
resume_website_restapi/templates/accounts/: account_verification_email.html
resume_website_restapi/templates/accounts/email/: email_confirmation_signup_message.htm.html  email_confirmation_signup_message.txt  email_confirmation_signup_subject.txt
resume_website_restapi/templates/rest_framework/: swagger-ui.html
resume_website_restapi/users/: models.py  serializers.py  tests.py  urls.py  views.py
